--- a/bundle/analyze/datasets/solarvista-engineers-today-available-vs-unavailable.yaml
+++ b/bundle/analyze/datasets/solarvista-engineers-today-available-vs-unavailable.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: Engineers Available vs Unavailable Today
 questions: ‘How many engineers are available vs unavailable today?’
 description: |-
