--- a/bundle/analyze/datasets/solarvista-export-closed-w-o-last-90-days.yaml
+++ b/bundle/analyze/datasets/solarvista-export-closed-w-o-last-90-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: "Export W/Os Closed Last 90 Days"
 questions: ‘Which work orders have been closed in the last 90 days?’
 description: |-
