--- a/bundle/analyze/datasets/solarvista-total-active-work-orders-older-than-14-days-vs-last-14-days.yaml
+++ b/bundle/analyze/datasets/solarvista-total-active-work-orders-older-than-14-days-vs-last-14-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: "Active W/Os Older Than 14 Days vs Last 14 Days"
 questions:
 description: |-
