--- a/bundle/analyze/datasets/solarvista-w-o-scheduled-vs-attended-last-7-days.yaml
+++ b/bundle/analyze/datasets/solarvista-w-o-scheduled-vs-attended-last-7-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: Work Orders Scheduled vs Attended Last 7 Days
 questions: How many work order were scheduled and attended for the last 7 days?
 description: |-
