--- a/bundle/analyze/datasets/solarvista-w-o-scheduled-vs-attended-today.yaml
+++ b/bundle/analyze/datasets/solarvista-w-o-scheduled-vs-attended-today.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: "Work Orders Scheduled vs Attended Today"
 questions: 'How many work orders have been scheduled and attended today?'
 description: |-
