--- a/bundle/analyze/datasets/solarvista-export-open-w-o.yaml
+++ b/bundle/analyze/datasets/solarvista-export-open-w-o.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: Solarvista
+source: null
 title: "Export Open W/Os"
 questions: ‘Which work orders are open?’
 description: |-
