Added #solarvista tag to solarvista-metric-jobs-completed-yesterday

--- a/bundle/analyze/datasets/solarvista-metric-jobs-completed-yesterday.yaml
+++ b/bundle/analyze/datasets/solarvista-metric-jobs-completed-yesterday.yaml
@@ -4,6 +4,8 @@ source: null
 questions: ‘How many jobs did we complete yesterday?’
 description: |-
    Number of jobs completed yesterday.
+
+   #Solarvista
 metadata: |-
    {
       "name": "fact_workitem", 
