Updated descriptions to reflect how day ranges were being selected as full days

--- a/bundle/analyze/datasets/solarvista-daily-projects-stats-last-14-days.yaml
+++ b/bundle/analyze/datasets/solarvista-daily-projects-stats-last-14-days.yaml
@@ -3,7 +3,7 @@ source: null
 title: Daily Project Stats Last 14 Days
 questions: What are the aged project stats over the last 14 days?
 description: |- 
-  Project stats, including aged projects in the table below the chart, for the last 14 days.
+  Project stats, including aged projects in the table below the chart, for the last full 14 days.
 
   #Solarvista
 metadata: |- 
