Added labels to the doughnut visualisation in solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml

--- a/bundle/analyze/datasets/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
+++ b/bundle/analyze/datasets/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
@@ -24,9 +24,12 @@ metadata: |-
    }
 visualisation: |-
    {
-      "chartjs-chart": {
-         "chartType": "doughnut"
+    "chartjs-chart": {
+      "chartType": "doughnut",
+      "options": {
+        "plugins": { "datalabels": { "display": true } }
       }
+    }
    }
 query: |-
    select 
