Add source to all datasets

--- a/bundle/analyze/datasets/tap-solarvista/solarvista-daily-projects-stats-last-14-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-daily-projects-stats-last-14-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2  
-source: null
+source: tap-solarvista
 title: Daily Project Stats Last 14 Days
 questions: What are the aged project stats over the last 14 days?
 description: |- 
