--- a/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-time-breakdown-last-30-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-time-breakdown-last-30-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: "Export Engineers Time Breakdown Last 30 Days"
 questions: ‘What is the breakdown of engineer time spend for the last 30 days?’
 description: |-
