--- a/bundle/analyze/datasets/tap-solarvista/solarvista-export-open-projects.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-export-open-projects.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: "Export Open Projects"
 questions: ‘Which projects are open?’
 description: |-
