--- a/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-projects-scheduled-vs-attended-last-7-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Projects Scheduled vs Attended Last 7 Days
 questions: How many projects were scheduled and attended for the last 7 days?
 description: |-
