--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-10-engineers-by-work-items-completed-last-7-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Top 10 Engineers by Work Items Completed Last 7 Days
 questions: Who closed the most Work Items in the last 7 days?
 description: |-
