--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Top 5 Customers by Work Items Created
 questions: 'How many work items have to made for each customer?'
 description: |-
