--- a/bundle/analyze/datasets/tap-solarvista/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: "Active Projects Older Than 14 Days vs Last 14 Days"
 questions:
 description: |-
