--- a/bundle/analyze/datasets/tap-solarvista/solarvista-total-revenue-per-week-last-12-weeks.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-total-revenue-per-week-last-12-weeks.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Revenue By Week Last 12 Weeks
 questions: What is our revenue per week for the last 12 weeks?
 description: |-
