--- a/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-working-time-per-engineer-last-7-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Working Time by Engineer Last 7 Days
 questions: How much time did each engineer spend working in the last 7 days?
 description: |-
