--- a/bundle/analyze/datasets/tap-solarvista/solarvista-revenue-by-customer-last-7-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-revenue-by-customer-last-7-days.yaml
@@ -1,5 +1,5 @@
 version: datasets/v0.2
-source: null
+source: tap-solarvista
 title: Revenue by Customer Last 7 Days
 questions: How much revenue did we make from each customer over the last 7 days?
 description: |-
