Fixed typo in solarvista-top-5-customers-by-work-items-created

--- a/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-top-5-customers-by-work-items-created.yaml
@@ -40,7 +40,7 @@ visualisation: |-
    }
 query: |-
    SELECT
-      MIN(name) "fact_work_item.customer_name"
+      MIN(name) "fact_workitem.customer_name"
       , COUNT(*) "fact_workitem.work_item_total"
    FROM fact_workitem fw
    LEFT JOIN dim_customer dc ON dc.customer_sk = fw.customer_sk
