--- a/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-work-items-completed-and-revenue-last-14-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-export-engineers-work-items-completed-and-revenue-last-14-days.yaml
@@ -18,7 +18,7 @@ query: |-
   FROM fact_workitem fw 
   LEFT JOIN dim_user du on du.users_sk = fw.users_sk
   WHERE current_stage = 'Closed'
-  AND report_date >= current_date - interval '14' day
+  AND report_date >= current_date - interval '14 day'
   AND report_date < current_date
   GROUP BY display_name
   ORDER BY "Work Items Completed" DESC
