--- a/bundle/analyze/datasets/tap-solarvista/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
+++ b/bundle/analyze/datasets/tap-solarvista/solarvista-total-active-projects-older-than-14-days-vs-last-14-days.yaml
@@ -36,8 +36,8 @@ query: |-
       (count(distinct(dim_project.project_sk))) as "dim_project.active_last_14_day"
       , (select (count(distinct(dim_project.project_sk)))
    from dim_project
-   where dim_project.createdon < now() - interval '14' day
+   where dim_project.createdon < now() - interval '14 day'
    and dim_project.status = 'Active') as "dim_project.active_over_14_days"
    from dim_project
-   where dim_project.createdon >= now() - interval '14' day
+   where dim_project.createdon >= now() - interval '14 day'
    and dim_project.status = 'Active'
